--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <body>
   <div class="container">
     <div class="logo-container">
-      <img src="./img/logo.svg" class="logo" height="250px" alt="">
+      <img src="./img/logo.svg" class="logo" alt="">
     </div>
-    <a class="btn .top-btn" href="./file/Agenda.pdf" download>عن شركة منتجات الحيوان للتجارة</a>
+    <a class="btn top-btn" href="./file/Agenda.pdf" download>عن شركة منتجات الحيوان للتجارة</a>
     <a class="btn" href="">برنامج الحفل</a>
     <a class="btn" href="">استبيان حفل شركاء منتجات الحيوان </a>
   </div>
